--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/eslint": "~8.56.2",
+    "@types/eslint-config-prettier": "~6.11.3",
+    "@types/gif.js": "~0.2.5",
+    "@types/lint-staged": "~13.2.2",
+    "@types/prettier": "~3.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
