--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -17,4 +17,5 @@ proconio = { version = "=0.3.6", features = ["derive"] }
 clap = { version = "4.0.22", features = ["derive"] }
 svg = "0.9.0"
 delaunator = "1.0.1"
-web-sys = {"version" = "0.3.44", features=['console']}
+web-sys = { "version" = "0.3.44", features = ['console'] }
+tools = { path = "../tools" }
