--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gif.js": "^0.2.0",
     "jszip": "^3.10.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript-plugin-css-modules": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
