--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2.89"
+getrandom = {version="0.2", features=["js"]}
 rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
 rand_chacha = "=0.3.1"
 rand_distr = "=0.4.3"
